# eyeinfo

./: .gitignore  01_dataset.dvc  02_eye_feature.dvc  03_metadata.dvc  README.md  environment.yml  setup.cfg
.dvc/: config
.github/workflows/: main.yml
data/: .gitignore  01_dataset.dvc  02_eye_feature.dvc  03_metadata.dvc
