[metadata]
name = eyeinfo
version = 1.0.0
author = Fabricio Batista Narcizo
author_email = narcizo@itu.dk
description = A Python project to manage the EyeInfo Dataset
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fabricionarcizo/eyeinfo
project_urls =
    Bug Tracker = https://github.com/fabricionarcizo/eyeinfo/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Commercial Software Licensing
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.11.6
install_requires =
    dvc[gdrive]
    numpy
    opencv-python
    pylint
    scipy
    setuptools

[options.packages.find]
where = src
